--- a/res/layout/reminder_row.xml
+++ b/res/layout/reminder_row.xml
@@ -4,20 +4,33 @@
     android:layout_height="match_parent"
     android:orientation="horizontal" >
     
-    <TextView android:id="@+id/done_textview"
-        style="@style/ReminderFont"
-        android:layout_width="70dp"
-        android:layout_height="wrap_content"/>
-    
-    <TextView android:id="@+id/name_textview"
-        style="@style/ReminderFont"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-    
-    <TextView android:id="@+id/alarm_textview"
-        style="@style/ReminderFont"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:gravity="right" />
+    <LinearLayout
+        android:id="@+id/inner_row"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_margin="10dp"
+        android:padding="10dp" 
+        android:background="@drawable/rounded" >
+        
+        <TextView
+            android:id="@+id/done_textview"
+            style="@style/ReminderFont"
+            android:layout_width="70dp"
+            android:layout_height="wrap_content" />
+
+        <TextView
+            android:id="@+id/name_textview"
+            style="@style/ReminderFont"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+        <TextView
+            android:id="@+id/alarm_textview"
+            style="@style/ReminderFont"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="right" />
+
+    </LinearLayout>
 </LinearLayout>
