--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -1,9 +1,22 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
-
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
         android:showAsAction="never"
         android:title="@string/action_settings"/>
+    
+<!--     <item -->
+<!--         android:id="@+id/action_new" -->
+<!--         android:actionLayout="@layout/action_new" -->
+<!--         android:showAsAction="always" -->
+<!--         android:icon="@drawable/b_audio" -->
+<!--         android:orderInCategory="2" -->
+<!--         android:title="@string/action_new_reminder"/> -->
+    <item
+        android:id="@+id/action_new"
+        android:showAsAction="always"
+        android:orderInCategory="2"
+        android:title="@string/action_new_reminder"/>
+    
 
 </menu>
