--- a/res/layout/reminder_edit_row.xml
+++ b/res/layout/reminder_edit_row.xml
@@ -6,25 +6,20 @@
     
     <TextView android:id="@+id/name_textview"
         style="@style/ReminderFont"
-        android:layout_width="100dp"
-        android:layout_height="wrap_content"/>
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="2"
+        android:paddingLeft="4dp"/>
     
     <TextView android:id="@+id/interval_textview"
         style="@style/ReminderFont"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-    
-    <TextView android:id="@+id/color_textview"
-        style="@style/ReminderFont"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="10dp" />
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"/>
     
     <TextView android:id="@+id/max_count_textview"
         style="@style/ReminderFont"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:gravity="right" />
+        android:layout_weight="1" />
 </LinearLayout>
