--- a/res/layout/reminder_edit_row.xml
+++ b/res/layout/reminder_edit_row.xml
@@ -1,25 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/edit_row"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal" >
-    
-    <TextView android:id="@+id/name_textview"
-        style="@style/ReminderFont"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="2"
-        android:paddingLeft="4dp"/>
-    
-    <TextView android:id="@+id/interval_textview"
-        style="@style/ReminderFont"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"/>
-    
-    <TextView android:id="@+id/max_count_textview"
-        style="@style/ReminderFont"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1" />
+    android:orientation="vertical">
+
+    <LinearLayout
+        android:id="@+id/inner_row"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_margin="10dp"
+        android:padding="10dp"
+        android:background="@drawable/rounded"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/name_textview"
+            style="@style/ReminderFont"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingLeft="4dp" />
+
+        <TextView
+            android:id="@+id/description_textview"
+            style="@style/ReminderFont"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="10sp" />
+    </LinearLayout>
 </LinearLayout>
