--- a/res/layout/activity_new_reminder.xml
+++ b/res/layout/activity_new_reminder.xml
@@ -1,83 +1,102 @@
 <RelativeLayout
+  xmlns:android="http://schemas.android.com/apk/res/android"
+  android:layout_width="fill_parent"
+  android:layout_height="fill_parent"
+  android:layout_margin="10dp">
+
+  <LinearLayout
+    android:id="@+id/top_row"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_margin="5dp">
-     <EditText
-        android:id="@+id/name_edittext"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:hint="@string/name_hint"
-        android:inputType="text"
-        />
-
-    <TextView
-        android:id="@+id/text3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/name_edittext"
-        android:text="check"/>
-    <EditText
-        android:id="@+id/max_count_edittext"
-        android:layout_width="60dp"
-        android:layout_height="wrap_content"
-        android:inputType="number"
-        android:layout_alignBaseline="@id/text3"
-        android:layout_toRightOf="@id/text3"/>
-    <TextView
-        android:id="@+id/text4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBaseline="@id/text3"
-        android:layout_toRightOf="@id/max_count_edittext"
-        android:text="times"/>
-
-    <CheckBox
-        android:id="@+id/interval_checkbox"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/text3"
-        android:onClick="onIntervalCheckBoxClick"/>
-
-    <TextView
-        android:id="@+id/text1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBaseline="@id/interval_checkbox"
-        android:layout_toRightOf="@id/interval_checkbox"
-        android:enabled="false"
-        android:text="every" />
+    android:layout_height="wrap_content">
 
     <EditText
-        android:id="@+id/interval_edittext"
-        android:layout_width="60dp"
-        android:layout_height="wrap_content"
-        android:layout_alignBaseline="@id/text1"
-        android:layout_toRightOf="@id/text1"
-        android:enabled="false"
-        android:inputType="number" />
+      android:id="@+id/name_edittext"
+      android:layout_width="0dp"
+      android:layout_height="fill_parent"
+      android:layout_weight="1"
+      android:hint="@string/name_hint"
+      android:inputType="text"
+      />
 
     <TextView
-        android:id="@+id/text2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBaseline="@id/text1"
-        android:layout_toRightOf="@id/interval_edittext"
-        android:enabled="false"
-        android:text="days" />
+      android:id="@+id/color_view"
+      android:layout_width="48dp"
+      android:layout_height="48dp"
+      android:layout_weight="0"/>
 
-    <TextView
-        android:id="@+id/color_view"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_below="@id/interval_checkbox"/>
+  </LinearLayout>
 
-    <Button
-        android:id="@+id/ok_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="ok" 
-        android:onClick="makeNew"
-        android:layout_below="@id/color_view"/>
+  <TextView
+    android:id="@+id/text3"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_below="@id/top_row"
+    android:textSize="20sp"
+    android:text="check"/>
+
+  <EditText
+    android:id="@+id/max_count_edittext"
+    android:layout_width="60dp"
+    android:layout_height="wrap_content"
+    android:layout_alignBaseline="@id/text3"
+    android:layout_toRightOf="@id/text3"
+    android:gravity="center"
+    android:inputType="number"/>
+
+  <TextView
+    android:id="@+id/text4"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_alignBaseline="@id/text3"
+    android:layout_toRightOf="@id/max_count_edittext"
+    android:textSize="20sp"
+    android:text="times"/>
+
+  <CheckBox
+    android:id="@+id/interval_checkbox"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_below="@id/text3"
+    android:onClick="onIntervalCheckBoxClick"/>
+
+  <TextView
+    android:id="@+id/text1"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_alignBaseline="@id/interval_checkbox"
+    android:layout_toRightOf="@id/interval_checkbox"
+    android:enabled="false"
+    android:textSize="20sp"
+    android:text="every"/>
+
+  <EditText
+    android:id="@+id/interval_edittext"
+    android:layout_width="60dp"
+    android:layout_height="wrap_content"
+    android:layout_alignBaseline="@id/text1"
+    android:layout_toRightOf="@id/text1"
+    android:enabled="false"
+    android:gravity="center"
+    android:inputType="number"/>
+
+  <TextView
+    android:id="@+id/text2"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_alignBaseline="@id/text1"
+    android:layout_toRightOf="@id/interval_edittext"
+    android:enabled="false"
+    android:text="days"/>
+
+
+  <Button
+    android:id="@+id/ok_button"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    android:layout_below="@id/interval_checkbox"
+    android:layout_centerHorizontal="true"
+    android:layout_marginTop="10dp"
+    android:onClick="makeNew"
+    android:text="ok"/>
 
 </RelativeLayout>
